--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@
 
 main .bg-image{
     height: 800px;
-    background-image: url(../img/Tribunales.jpeg);
+    background-image: url(../img/Tribunales.webp);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
