--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,386 @@
-/* Error: Can't find stylesheet to import.
- *   ,
- * 1 | @import 'generales';
- *   |         ^^^^^^^^^^^
- *   '
- *   scss\style.scss 1:9  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Can't find stylesheet to import.\a   \2577 \a 1 \2502  @import 'generales';\d\a   \2502          ^^^^^^^^^^^\a   \2575 \a   scss\\style.scss 1:9  root stylesheet";
+@import url("https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz,wght@8..60,300;8..60,400&display=swap");
+@font-face {
+  font-family: "Roboto";
+  src: url("../fonts/Roboto-Regular.ttf");
 }
+* {
+  padding: 0;
+  margin: 0px;
+  box-sizing: border-box;
+  list-style-position: none;
+}
+
+/*Header*/
+.navbar {
+  background-color: rgb(204, 252, 236);
+}
+
+.menu nav {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+.menu nav ul {
+  display: flex;
+  list-style-type: none;
+}
+.menu nav ul li {
+  margin-left: 10px;
+}
+.menu nav ul li a {
+  color: black;
+  text-decoration: none;
+}
+.menu nav ul li:hover a {
+  color: white;
+  text-decoration: underline;
+}
+
+/*main index*/
+main .bg-image {
+  height: 800px;
+  background-image: url(../img/Tribunales.webp);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 80px 20px;
+}
+
+/*Main Nosotros mobile first*/
+.nosotrosmain {
+  background-color: rgba(250, 246, 246, 0.973);
+  padding: 3rem 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.pnosotros {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.noscaja3 {
+  display: flex;
+  flex-direction: column;
+}
+
+/*Main Servicios*/
+.servicios {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.title-service {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 35px;
+  padding-bottom: 20px;
+}
+
+.containerservicios {
+  width: 100%;
+  display: flex;
+  max-width: 1100px;
+}
+
+.card {
+  width: 100%;
+  margin: 20px;
+  border-radius: 6px;
+  overflow: hidden;
+  background: white;
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
+  cursor: default;
+  transition: all 400ms ease;
+}
+
+.card:hover {
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
+  transform: translateY(-3%);
+}
+
+.card img {
+  width: 100%;
+  height: 210px;
+}
+
+.card .contenido {
+  padding: 15px;
+  text-align: center;
+}
+
+.card .contenido p {
+  line-height: 1.5;
+  color: #6a6a6a;
+}
+
+.card .contenido h3 {
+  font-weight: 400;
+  margin-bottom: 15px;
+}
+
+.card .contenido a {
+  text-decoration: none;
+  display: inline-block;
+  padding: 10px;
+  margin-top: 10px;
+  color: #2fb4cc;
+  border: 1px solid #2fb4cc;
+  border-radius: 4px;
+  transition: all 400ms ease;
+}
+
+.card .contenido a:hover {
+  background: #2fb4cc;
+  color: #fff;
+}
+
+.cont-laboral {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+
+.cont-sucesiones {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+
+.cont-fiscal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+}
+
+/* Main Noticias mobile first*/
+.noticias-main {
+  background-color: rgba(250, 246, 246, 0.973);
+  padding: 3rem 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.img-not-caja3 {
+  width: 100%;
+}
+
+/* Main contacto */
+.titulocontacto {
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
+}
+
+.pcontacto {
+  display: flex;
+  justify-content: center;
+}
+
+main .fondocontacto {
+  background-color: beige;
+}
+
+main .tituloyparrafo {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+}
+
+main section h2 {
+  color: rgb(34, 43, 33);
+  background-color: rgba(255, 255, 255, 0.829);
+  width: 400px;
+  margin-bottom: 80px;
+  padding: 10px 5px;
+  border: 3px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+main section p {
+  text-align: justify;
+  color: rgb(37, 40, 49);
+  font-size: 20px;
+  background-color: rgba(255, 255, 255, 0.829);
+  width: 600px;
+  padding: 20px 40px;
+  border: 3px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Footer */
+footer {
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  color: white;
+  padding: 2rem;
+  text-align: center;
+}
+
+.logo-menu,
+.icons-copiright {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+}
+
+.footer-menu ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  padding: 0px;
+  gap: 0.75rem;
+}
+
+.footer-menu ul li a {
+  text-decoration: none;
+  font-family: var(--text);
+  color: var(--white);
+  font-size: 0.75rem;
+}
+
+.icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  font-size: 1.2rem;
+}
+
+.copyright {
+  color: gray;
+  font-size: 0.75rem;
+  padding: 1.2rem;
+}
+
+/* Responsive Index y footer index*/
+@media (max-width: 480px) {
+  main section p {
+    width: 100%;
+  }
+}
+/* Responsive Nosotros para Deskstop */
+@media (min-width: 991px) {
+  .nosotrosmain {
+    display: grid;
+    width: 100%;
+    border: 1px solid yellowgreen;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 15% 30% 30% 25%;
+    grid-template-areas: "noscaja1 noscaja1 noscaja1" "noscaja2 noscaja3 noscaja4" "noscaja2 noscaja3 noscaja4" "noscaja5 noscaja5 noscaja5";
+  }
+  .nosotrosmain .noscaja1 {
+    grid-area: noscaja1;
+  }
+  .nosotrosmain .noscaja2 {
+    grid-area: noscaja2;
+  }
+  .nosotrosmain .noscaja3 {
+    grid-area: noscaja3;
+  }
+  .nosotrosmain .noscaja3 img {
+    max-width: 100%;
+  }
+  .nosotrosmain .noscaja4 {
+    grid-area: noscaja4;
+  }
+  .nosotrosmain .noscaja5 {
+    grid-area: noscaja5;
+  }
+  .noticias-main {
+    display: grid;
+    width: 100%;
+    border: 1px solid yellowgreen;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 10% 10% 80%;
+    grid-template-areas: "not-caja1 not-caja1" "not-caja2 not-caja2" "not-caja3 not-caja4";
+  }
+  .noticias-main .not-caja1 {
+    grid-area: not-caja1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .noticias-main .not-caja2 {
+    grid-area: not-caja2;
+    display: flex;
+    justify-content: flex-end;
+  }
+  .noticias-main .not-caja3 {
+    grid-area: not-caja3;
+  }
+  .noticias-main .not-caja4 {
+    grid-area: not-caja4;
+    padding: 10px;
+  }
+  .noticias-main .p-not-caja4 {
+    font-size: 20px;
+  }
+  /* Responsive footer desktop */
+  .footer {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 2rem 8rem;
+  }
+  .logo-menu {
+    align-items: start;
+  }
+  .footer-menu ul {
+    flex-direction: row;
+  }
+  .icons-copyright {
+    align-items: end;
+  }
+}
+/* Responsive para mobile Servicios */
+@media (max-width: 991px) {
+  main .main-servicios {
+    background-color: rgba(250, 246, 246, 0.973);
+    padding: 3rem 1.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .containerservicios {
+    display: flex;
+    flex-direction: column;
+  }
+  .card {
+    margin: 0px;
+    padding: 20px;
+  }
+  .card img {
+    height: 0%;
+  }
+  .laboralmas {
+    width: 100%;
+  }
+  .familymas {
+    width: 100%;
+  }
+  .impuestosmas {
+    width: 100%;
+  }
+}/*# sourceMappingURL=style.css.map */
