--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,7 +1,7 @@
 /*Header*/
 
 .navbar{
-    background-color: rgb(204, 252, 236);
+    background-color: #C4DFDF;
 }
 .menu nav{
     display: flex;
