--- a/scss/views/_contacto.scss
+++ b/scss/views/_contacto.scss
@@ -8,6 +8,8 @@
 .pcontacto{
     display: flex;
     justify-content: center;
+    align-items: center;
+    padding: 20px
 }
 
 main .fondocontacto{
