--- a/scss/views/_nosotros.scss
+++ b/scss/views/_nosotros.scss
@@ -1,7 +1,7 @@
 /*Main Nosotros mobile first*/
 
 .nosotrosmain{
-    background-color: rgba(250, 246, 246, 0.973);
+    background-color: $main-color;
     padding: 3rem 1.5rem;
     display: flex;
     flex-direction: column;
