--- a/scss/views/_noticias.scss
+++ b/scss/views/_noticias.scss
@@ -1,7 +1,7 @@
 /* Main Noticias mobile first*/
 
 .noticias-main{
-    background-color: rgba(250, 246, 246, 0.973);
+    background-color: $main-color;
     padding: 3rem 1.5rem;
     display: flex;
     flex-direction: column;
