--- a/scss/_queries.scss
+++ b/scss/_queries.scss
@@ -87,6 +87,9 @@
         }
         .icons-copyright{
             align-items: end;
+        }
+        .logo-lc{
+            width: 60%;
         }   
     }
 
