--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -2,6 +2,14 @@
 
 .navbar{
     background-color: #C4DFDF;
+    .logo-LC-header{
+        width: 10%;
+    }
+    .navbar-brand{
+        color: black;
+        font-family: 'Times New Roman', Times, serif;
+        font-size: x-large;
+    }
 }
 .menu nav{
     display: flex;
