--- a/scss/views/_contacto.scss
+++ b/scss/views/_contacto.scss
@@ -1,5 +1,16 @@
 /* Main contacto */
-
+.fondocontacto{
+    background-color: $main-color;
+}
+.img-contacto{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 10px;
+}
+.container{
+    padding: 20px;
+}
 .titulocontacto{
     display: flex;
     justify-content: center;
@@ -12,9 +23,7 @@
     padding: 20px
 }
 
-main .fondocontacto{
-    background-color: beige;
-}
+
 main .tituloyparrafo{
     display: flex;
     justify-content: flex-start;
@@ -44,4 +53,7 @@ main section p{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.col-6{
+    width: 100%;
 }
