--- a/scss/views/_index.scss
+++ b/scss/views/_index.scss
@@ -6,5 +6,8 @@ main .bg-image{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    padding: 80px 20px
+    padding: 80px 20px;
+    .h2main{
+        text-align: center;
+    }
 }
