--- a/scss/_queries.scss
+++ b/scss/_queries.scss
@@ -8,6 +8,27 @@
 /* Responsive Nosotros para Deskstop */
 
 @media(min-width:991px){
+    .cont-laboral{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 120px;
+    }
+    .cont-sucesiones{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 120px;
+    }
+    .cont-fiscal{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 120px;
+    }
     .nosotrosmain {
             display: grid;
             width: 100%;
@@ -38,7 +59,7 @@
                 grid-area: noscaja5;
             }         
         }
-    .noticias-main{
+        .noticias-main{
         display: grid;
         width: 100%;
         border: 1px solid yellowgreen;
@@ -112,6 +133,9 @@
 
 
     @media(max-width:991px){
+        .navbar .logo-LC-header{
+            width: 15%;
+        }
         main .main-servicios{
             background-color: rgba(250, 246, 246, 0.973);
             padding: 3rem 1.5rem;
